test/tests/compiler/12_unsigned_integers/invalid_parse/plx1_paren_cast.plx
pub fn main(none) i32 {
    return (u32) -10
}
